[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/ability_1.gd" type="Script" id=1]
[ext_resource path="res://art/PNG/snowflake001.tex" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 130.0

[node name="ability_1" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="effect2" type="Particles2D" parent="."]

config/amount = 128
config/lifetime = 5.0
config/time_scale = 6.0
config/emit_timeout = 5.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.05
config/texture = ExtResource( 2 )
params/direction = 180.0
params/spread = 360.0
params/linear_velocity = 520.0
params/spin_velocity = 0.05
params/orbit_velocity = 0.05
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 128.0
params/damping = 1024.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.1
randomness/spin_velocity = 1.0
randomness/orbit_velocity = 0.5
randomness/damping = 0.1
randomness/final_size = 0.5

[node name="effect1" type="Particles2D" parent="."]

config/amount = 15
config/lifetime = 0.1
config/process_mode = 1
params/direction = 180.0
params/spread = 10.0
params/linear_velocity = 600.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 200.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 5.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.292969, 0.950287, 1, 1 )

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="." to="." method="_on_ability_1_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_ability_1_body_exit"]

[connection signal="timeout" from="timer" to="." method="freeze"]

[connection signal="timeout" from="timer1" to="." method="_on_timer1_timeout"]


